--- a/git.html
+++ b/git.html
@@ -11,6 +11,9 @@
              this is a git trying 
          </h1>
           <h2> new branch v2 </h1>
+            <h1>
+                git push try 
+            </h1>
      </div>
 </body>
 </html>
